--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Liu Peng' Blog
 SEOTitle: 刘鹏的博客 | Liu Peng' Blog
-header-img: assets/home-bg.jpg
+header-img: assets/网站素材/home-bg.jpg
 email: liupeng@zhishisoft.com
 keyword: "刘鹏, 蚊香酱, wenxiangjiang, iOS, 教程, 博客"
 description: "Liu Peng' Blog"
@@ -51,17 +51,6 @@ kramdown:
 
 
 
-# Disqus settings
-#disqus_username: _your_disqus_short_name_
-
-# Duoshuo settings
-#duoshuo_username: huxblog
-# Share component is depend on Comment so we can NOT use share only.
-#duoshuo_share: true                     # set to false if you want to use Comment without Sharing
-
-
-
-
 # 统计设置
 
 ### 百度统计
@@ -79,7 +68,7 @@ sidebar: true
 ### 侧栏描述
 sidebar-about-description: "Keep hungry, keep foolish"
 ### 侧栏图像
-sidebar-avatar: assets/about-avatar.jpg
+sidebar-avatar: assets/网站素材/about-avatar.jpg
 
 ### 是否启用标签云
 featured-tags: true
