--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ sidebar: true
 ### 侧栏描述
 sidebar-about-description: "Keep hungry, keep foolish"
 ### 侧栏图像
-sidebar-avatar: assets/网站素材/about-avatar.jpg
+sidebar-avatar: assets/网站素材/about-avatar.png
 
 ### 是否启用标签云
 featured-tags: true
